// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`路線図の出力を固定する (#2798) > animation を持たない小さな路線図 1`] = `
{
  "edges": [
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "受付",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e0-受付-確認",
      "label": "渡す",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "確認",
      "tone": "accent",
      "widthBind": undefined,
    },
  ],
  "id": "路線図の固定",
  "lanes": [
    {
      "id": "track-front",
      "label": "front",
      "posH": 160,
      "posW": 600,
      "posX": 0,
      "posY": 0,
      "width": 600,
    },
    {
      "id": "track-review",
      "label": "review",
      "posH": 160,
      "posW": 600,
      "posX": 0,
      "posY": 160,
      "width": 600,
    },
  ],
  "nodes": [
    {
      "id": "受付",
      "kind": "station",
      "lane": "track-front",
      "posX": 160,
      "posY": 80,
      "stack": 0,
      "title": "受付",
    },
    {
      "id": "確認",
      "kind": "station",
      "lane": "track-review",
      "posX": 440,
      "posY": 240,
      "stack": 1,
      "title": "確認",
    },
  ],
  "phases": [
    {
      "activate": [
        "e0-受付-確認",
      ],
      "body": "",
      "duration": 1000,
      "id": "static",
      "sets": [],
      "title": "路線図の固定",
      "tweens": [],
    },
  ],
  "states": [],
  "topic": "路線図の固定",
  "type": "swimlane",
}
`;

exports[`路線図の出力を固定する (#2798) > 見本帳の路線図 1`] = `
{
  "edges": [
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "受け付ける",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e0-受け付ける-書類を確かめる",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "書類を確かめる",
      "tone": "accent",
      "widthBind": undefined,
    },
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "書類を確かめる",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e1-書類を確かめる-内容を審査する",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "内容を審査する",
      "tone": "accent",
      "widthBind": undefined,
    },
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "内容を審査する",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e2-内容を審査する-支払う",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "支払う",
      "tone": "accent",
      "widthBind": undefined,
    },
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "支払う",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e3-支払う-結果を知らせる",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "結果を知らせる",
      "tone": "accent",
      "widthBind": undefined,
    },
    {
      "cardinality": undefined,
      "dashOffsetBind": undefined,
      "from": "結果を知らせる",
      "guard": undefined,
      "head": undefined,
      "headFill": undefined,
      "headLabel": undefined,
      "id": "e4-結果を知らせる-記録する",
      "label": "",
      "labelOffsetX": undefined,
      "labelOffsetY": undefined,
      "labelPlate": undefined,
      "overlay": undefined,
      "role": undefined,
      "routing": "metro",
      "side": undefined,
      "strokeBind": undefined,
      "style": undefined,
      "sub": undefined,
      "tailHead": undefined,
      "tailHeadFill": undefined,
      "tailLabel": undefined,
      "to": "記録する",
      "tone": "accent",
      "widthBind": undefined,
    },
  ],
  "id": "申請が担当を乗り換えて進む",
  "lanes": [
    {
      "id": "track-front",
      "label": "窓口",
      "posH": 160,
      "posW": 1820,
      "posX": 0,
      "posY": 0,
      "width": 1820,
    },
    {
      "id": "track-review",
      "label": "審査係",
      "posH": 160,
      "posW": 1820,
      "posX": 0,
      "posY": 160,
      "width": 1820,
    },
    {
      "id": "track-pay",
      "label": "経理",
      "posH": 160,
      "posW": 1820,
      "posX": 0,
      "posY": 320,
      "width": 1820,
    },
  ],
  "nodes": [
    {
      "id": "受け付ける",
      "kind": "station",
      "lane": "track-front",
      "posX": 160,
      "posY": 80,
      "stack": 0,
      "title": "受け付ける",
    },
    {
      "id": "書類を確かめる",
      "kind": "station",
      "lane": "track-front",
      "posX": 380,
      "posY": 80,
      "stack": 1,
      "title": "書類を確かめる",
    },
    {
      "id": "内容を審査する",
      "kind": "station",
      "lane": "track-review",
      "posX": 660,
      "posY": 240,
      "stack": 2,
      "title": "内容を審査する",
    },
    {
      "id": "支払う",
      "kind": "station",
      "lane": "track-pay",
      "posX": 940,
      "posY": 400,
      "stack": 3,
      "title": "支払う",
    },
    {
      "id": "結果を知らせる",
      "kind": "station",
      "lane": "track-front",
      "posX": 1380,
      "posY": 80,
      "stack": 4,
      "title": "結果を知らせる",
    },
    {
      "id": "記録する",
      "kind": "station",
      "lane": "track-review",
      "posX": 1660,
      "posY": 240,
      "stack": 5,
      "title": "記録する",
    },
  ],
  "phases": [
    {
      "activate": [
        "受け付ける",
        "書類を確かめる",
        "e0-受け付ける-書類を確かめる",
      ],
      "badge": "窓口",
      "body": "窓口が申請を受け付けて書類を確かめる。 同じ担当の駅は 1 本の線路に並ぶ。",
      "duration": 1200,
      "id": "窓口で受ける",
      "sets": [],
      "title": "窓口で受ける",
      "tweens": [],
    },
    {
      "activate": [
        "内容を審査する",
        "支払う",
        "e1-書類を確かめる-内容を審査する",
        "e2-内容を審査する-支払う",
      ],
      "badge": "審査と支払い",
      "body": "担当が替わる所で線が斜めに乗り換える。 審査係が審査し、経理が支払う。",
      "duration": 1200,
      "id": "乗り換える",
      "sets": [],
      "title": "乗り換える",
      "tweens": [],
    },
    {
      "activate": [
        "結果を知らせる",
        "記録する",
        "e3-支払う-結果を知らせる",
        "e4-結果を知らせる-記録する",
      ],
      "badge": "完了",
      "body": "窓口へ戻って結果を知らせ、審査係が記録する。 工程と担当の交代を 1 枚で追える。",
      "duration": 1200,
      "id": "知らせて残す",
      "sets": [],
      "title": "知らせて残す",
      "tweens": [],
    },
  ],
  "states": [],
  "topic": "申請が担当を乗り換えて進む",
  "type": "swimlane",
}
`;
